[#332, #375] application: add more unit tests coverage